<resources>
    <string name="app_name">MedHelp</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="createYourAccount">Create your account</string>
    <string name="firstName">First name…</string>
    <string name="secondName">Second name…</string>
    <string name="email">Email…</string>
    <string name="phoneNumber">Phone number…</string>
    <string name="age">Age…</string>
    <string name="gender">Gender</string>
    <string name="username">Username…</string>
    <string name="password">Password…</string>
    <string name="confirmPassword">Confirm password…</string>
    <string name="cnp">SSN…</string>
    <string name="id">ID…</string>
    <string name="specialization">Specialization…</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="agree">I agree to the processing of personal data</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="registerNow1">Not registered yet?</string>
    <string name="registerNow2">Click</string>
    <string name="registerNow3">to create your account.</string>
    <string name="send">Send</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="otherDetails">Other observations (eg surgery, drug allergies, food intolerances)</string>
    <string name="save">Save</string>
    <string name="services">Services</string>
    <string name="prices">Prices</string>
    <string name="emergency">Emergency</string>
    <string name="doctors">Doctors</string>
    <string name="logout">Log out</string>
    <string name="cardiology">Cardiology</string>
    <string name="dentistry">Dentistry</string>
    <string name="ophthalmology">Ophthalmology</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="emergencyDepartment">Emergency department</string>
    <string name="dermatology">Dermatology</string>
    <string name="upload">Upload</string>
    <string name="add">Add Service</string>
    <string name="done">Done</string>
    <string name="service">Service…</string>
    <string name="price">Price…</string>
    <string name="bookAnAppointment">Book an appointment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="book">Book</string>
    <string name="select">Select</string>
    <string name="booked">Booked</string>
    <string name="getAddress">Get address</string>
    <string name="getLocation">Get current location</string>
    <string name="problemDescription">Add a short description of the problem</string>
    <string name="uploadImage">Upload an image</string>
    <string name="emergencySuccessfullySent">Your emergency has been successfully registered.</string>
    <string name="ambulance">An ambulance will be sent to your location. </string>
    <string name="contact">You will be contacted by a doctor as soon as possible.</string>
    <string name="ok">OK</string>
    <string name="appointments">Appointments</string>
    <string name="listOfPatients">List of patients</string>
    <string name="selectADay">Select a date</string>
    <string name="noAppointmentsToday">There are no appointments on this day.</string>
    <string name="noAppointmentsYet">There are no appointments registered in the system for you yet.</string>
    <string name="appointmentBooked">Your appointment was successfully registered.</string>
    <string name="name">Name:</string>
    <string name="medicalService">Medical service:</string>
    <string name="dateAndTime">Date and time:</string>
    <string name="details1">Details:</string>
    <string name="details">Details</string>
    <string name="phoneNumber1">Phone number:</string>
    <string name="cnp1">SSN:</string>
    <string name="age1">Age:</string>
    <string name="gender1">Gender:</string>
    <string name="patientisList">Patients</string>
    <string name="viewMore">View more</string>
    <string name="address">Address:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="sendAnAmbulance">Send an ambulance</string>
    <string name="call">Call</string>
    <string name="showMore">Show more</string>
    <string name="showLess">Show less</string>
    <string name="detele">Delete</string>
    <string name="myAppointments">My appointments</string>
    <string name="close">Close</string>
    <string name="newPassword">New password…</string>
    <string name="confirmNewPassword">Confirm new password…</string>
    <string name="resetYourPassword">Reset your password</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="oldAppontment">Old appointment: </string>
    <string name="newAppointment">New appointment: </string>
</resources>