<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:layout_centerHorizontal="true"
        android:text="@string/emergencySuccessfullySent"
        android:textAlignment="center"
        android:textColor="@color/green_rgb"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/segoe_ui_bold_italic"
        android:text="@string/ambulance"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/OkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/green_rgb"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/segoe_ui_bold_italic"
        android:text="@string/contact"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:textSize="20sp" />
</RelativeLayout>