<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/antet" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/login_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UsernameLayoutLogin"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:hint=" "
        android:textColorHint="@color/dark_blue"
        android:windowSoftInputMode="adjustPan"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UsernameTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:editable="true"
            android:drawableStart="@drawable/user"
            android:elegantTextHeight="true"
            android:fontFamily="@font/segoe_ui_italic"
            android:hint="@string/username"
            android:drawablePadding="10dp"
            android:keepScreenOn="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="false"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:textSize="18sp"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordLayoutLogin"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:hint=" "
        android:textColorHint="@color/dark_blue"
        android:windowSoftInputMode="adjustPan"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:editable="true"
            android:elegantTextHeight="true"
            android:fontFamily="@font/segoe_ui_italic"
            android:hint="@string/password"
            android:drawableStart="@drawable/password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:keepScreenOn="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="false"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:textSize="18sp"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/small_rectangle" />

    <Button
        android:id="@+id/LogInButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="106dp"
        android:height="37dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <Button

        android:id="@+id/ForgotPasswordButton"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:background="#00FFFFFF"
        android:text="@string/forgotPassword"
        android:textColor="@color/blue"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/RegisterNow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerNow1"
        android:textSize="18dp"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <TextView
        android:id="@+id/RegisterNow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerNow2"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/RegisterNowButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="#00FFFFFF"
        android:text="HERE"
        android:fontFamily="@font/segoe_ui_bold"
        android:textColor="@color/dark_blue"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/RegisterNow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerNow3"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

</androidx.constraintlayout.widget.ConstraintLayout>